Completetd Req with Local - On Search -- You will Get Player Quotes

--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,13 @@
 	<artifactId>commons-configuration</artifactId>
 	<version>1.10</version>
 </dependency>
+
         
+        <dependency>
+        <groupId>mysql</groupId>
+        <artifactId>mysql-connector-java</artifactId>
+        <version>8.0.18</version>
+    </dependency>
         
    </dependencies>
    
